--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "jsbridge-server",
+  "name": "server-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js",
-    "tsc": "tsc"
+    "test": "node ./dist/index.js",
+    "build": "webpack --config webpack.config.js -w",
+    "build:tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -15,17 +13,16 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
-    "@types/default-gateway": "^7.2.2",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
     "babel-loader": "^9.1.3",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "address": "^2.0.2",
     "chalk": "^5.3.0",
+    "core-js": "^3.36.1",
     "default-gateway": "^7.2.2",
     "express": "^4.19.2",
     "portfinder": "^1.0.32",
