--- a/server-ts/tsconfig.json
+++ b/server-ts/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "node16",
-    "moduleResolution": "node16",
+    "target": "esnext",
+    "module": "commonjs",
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist-tsc"
   },
   "include": ["src/**/*"],
   "files": ["./index.d.ts"]
