--- a/client-app/package.json
+++ b/client-app/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
+    "dev": "vite --host --config=./vite.config.ts",
+    "build:mock": "tsc && vite build --config=./vite.mock.config.ts",
+    "build:jsbridge": "tsc && vite build --config=./vite.jsbridge.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "antd-mobile": "^5.35.0",
     "antd-mobile-icons": "^0.3.0",
+    "nonce-str": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io-client": "^4.7.5"
@@ -27,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "less": "^4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-externals": "^0.6.2"
   }
 }
