--- a/package.json
+++ b/package.json
@@ -10,15 +10,34 @@
     "jsbridge",
     "plugins"
   ],
+  "files": [
+    "dist-mock",
+    "JSBridgePlugin.js",
+    "package.json",
+    "server-app/dist",
+    "server-app/public"
+  ],
   "author": "eminoda",
   "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-inject-plugin": "^1.5.5",
+    "webpack-node-externals": "^3.0.0"
+  },
   "dependencies": {
+    "@ant-design/colors": "^7.0.2",
     "address": "^2.0.2",
-    "chalk": "^2.4.2",
-    "default-gateway": "^6.0.3",
+    "chalk": "^5.3.0",
+    "core-js": "^3.36.1",
+    "default-gateway": "^7.2.2",
     "express": "^4.19.2",
-    "http-proxy-middleware": "^3.0.0",
-    "nonce-str": "^1.0.1",
     "portfinder": "^1.0.32",
     "socket.io": "^4.7.5"
   }
